reformatting intro post

--- a/data.html
+++ b/data.html
@@ -133,45 +133,43 @@ emerging technologies: cloud, ML, Big Data ; all impact analytics</p><p>
 orgs use data to uncover opportunities and apply that understanding to differentiate themselves</p><p>
 data professionals</p><p>
 <h3>Key Players in Data Ecosystem</h3></p><p>
-<ul>
-</li><li>
-Data Engineers -> extract, integrate and organize data from disaparate sources<br>
-clean, transform, + prepare data<br>
-design, store, and manage data repositories<br>
-good understanding of programming, systems + tech architectures, in-depth understanding of relational databases and non-relational data stores</li><li>
-Data Analysts -> translares data into plain english so stakeholders can make decisions<br>
-inspect + clean data for deriving insights<br>
-find correlations, patterns, and apply statistical methods<br>
-visualize data to interpret and present findings of analysis<br>
-they answer questions<br>
-require good knowledge of spreadsheets and statistical tools to create charts and dashboards<br>
-need some programming skills<br>
-strong-analytical and storytelling skiils</li><li>
-Data Scientists -> analyze data for actionable insights<br>
-create predicitve models using machine leaarning<br>
-answer predective/anticipative modelling-oriented questions<br>
-must know math and stats<br>
-must have domain knowledge</li><li>
-Business Analysts -> leverage the work of data analysts and data scientists to look at possible implications of actions they need to take</li><li>
-BI Analysts -> focus on market forces and external influences that shape the business<br>
-organize and monitor data on different business functions<br>
-explore data to extract actionables</li></ul></p><p>
+<h4>Data Engineers</h4></p><p>
+extract, integrate and organize data from disaparate sources</p><p>
+clean, transform, + prepare data</p><p>
+design, store, and manage data repositories</p><p>
+good understanding of programming, systems + tech architectures, in-depth understanding of relational databases and non-relational data stores</p><p>
+Data Analysts -> translate data into plain english so stakeholders can make decisions</p><p>
+inspect + clean data for deriving insights</p><p>
+find correlations, patterns, and apply statistical methods</p><p>
+visualize data to interpret and present findings of analysis</p><p>
+they answer questions</p><p>
+require good knowledge of spreadsheets and statistical tools to create charts and dashboards</p><p>
+need some programming skills</p><p>
+strong-analytical and storytelling skiils</p><p>
+Data Scientists -> analyze data for actionable insights</p><p>
+create predicitve models using machine leaarning</p><p>
+answer predective/anticipative modelling-oriented questions</p><p>
+must know math and stats</p><p>
+must have domain knowledge</p><p>
+Business Analysts -> leverage the work of data analysts and data scientists to look at possible implications of actions they need to take</p><p>
+BI Analysts -> focus on market forces and external influences that shape the business</p><p>
+organize and monitor data on different business functions</p><p>
+explore data to extract actionables</p><p>
 <h3>Defining Data Analysis</h3></p><p>
 -> finding patterns and correlations to draw conclusions about past performance and future actions</p><p>
-types:<ul></li><li>
-descriptive analytics -> what happened</li><li>
-diagnostic analytics -> why did it happen</li><li>
-predictive analytics -> what will happen next</li><li>
-prescriptive analytics -> what should be done about it</li></ul></p><p>
-DA -></p><p><ul><li>
-understanding the problem adn desired result</li><li>
-setting a clear metric</li><li>
-gathering data</li><li>
-cleaning data</li><li>
-analyzing and mining data</li><li>
-interpreting results</li><li>
+types:</p><p>
+descriptive analytics -> what happened</p><p>
+diagnostic analytics -> why did it happen</p><p>
+predictive analytics -> what will happen next</p><p>
+prescriptive analytics -> what should be done about it</p><p>
+understanding the problem adn desired result</p><p>
+setting a clear metric</p><p>
+gathering data</p><p>
+cleaning data</p><p>
+analyzing and mining data</p><p>
+interpreting results</p><p>
 presenting your findings</li><ul></p><p>
-<h3>"analysis" vs. "analytics"?<h3></p><p>
+<h4>"analysis" vs. "analytics"?</h4></p><p>
 Analysis - detailed examination of the elements or structure of something</p><p>
 Analytics - the systematic computational analysis of data or statistics</p><p>
 
@@ -334,7 +332,6 @@ tag: meta</a></h2><p>
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
-<date>23-09-09<br></date><a href="#profiles">Profiles</a><br>
 <date>23-09-07<br></date><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
 <date>23-09-07<br></date><a href="#ibm-da1-wk1">IBM - Intro to Data Analytics: Week 1</a><br>
 <date>23-09-06<br></date><a href="#intro-courses">A Look at Introductory Courses</a><br>
@@ -352,10 +349,10 @@ I'm learning about data analytics and I'm using this website to document my proc
 <article id="profiles">
 <h2><a href="#profiles">
 Profiles</a></h2><p>
-<a href="https://github.com/diagrammatics" target="_blank">GitHub↗&#xFE0E</a>"</p><p>
-<a href="https://www.kaggle.com/diagrammatics" target="_blank">Kaggle↗&#xFE0E</a>"</p><p>
-<a href="https://www.data.world/diagrammatics" target="_blank">Data.World↗&#xFE0E</a>"</p><p>
-<a href="https://www.codewars.com/users/diagrammatics" target="_blank">Codewars↗&#xFE0E</a>"</p><p>
+<a href="https://github.com/diagrammatics" target="_blank">GitHub↗&#xFE0E</a><br>
+<a href="https://www.kaggle.com/diagrammatics" target="_blank">Kaggle↗&#xFE0E</a><br>
+<a href="https://www.data.world/diagrammatics" target="_blank">Data.World↗&#xFE0E</a><br>
+<a href="https://www.codewars.com/users/diagrammatics" target="_blank">Codewars↗&#xFE0E</a><br>
 
 </p>
 </article>
