reformatted ibm-da1-wk1

--- a/data.html
+++ b/data.html
@@ -138,7 +138,8 @@ extract, integrate and organize data from disaparate sources</p><p>
 clean, transform, + prepare data</p><p>
 design, store, and manage data repositories</p><p>
 good understanding of programming, systems + tech architectures, in-depth understanding of relational databases and non-relational data stores</p><p>
-Data Analysts -> translate data into plain english so stakeholders can make decisions</p><p>
+<h4>Data Analysts</h4></p><p>
+translate data into plain english so stakeholders can make decisions</p><p>
 inspect + clean data for deriving insights</p><p>
 find correlations, patterns, and apply statistical methods</p><p>
 visualize data to interpret and present findings of analysis</p><p>
@@ -146,7 +147,8 @@ they answer questions</p><p>
 require good knowledge of spreadsheets and statistical tools to create charts and dashboards</p><p>
 need some programming skills</p><p>
 strong-analytical and storytelling skiils</p><p>
-Data Scientists -> analyze data for actionable insights</p><p>
+<h4>Data Scientists</h4></p><p>
+analyze data for actionable insights</p><p>
 create predicitve models using machine leaarning</p><p>
 answer predective/anticipative modelling-oriented questions</p><p>
 must know math and stats</p><p>
@@ -157,7 +159,7 @@ organize and monitor data on different business functions</p><p>
 explore data to extract actionables</p><p>
 <h3>Defining Data Analysis</h3></p><p>
 -> finding patterns and correlations to draw conclusions about past performance and future actions</p><p>
-types:</p><p>
+<h4>types:<h4></p><p>
 descriptive analytics -> what happened</p><p>
 diagnostic analytics -> why did it happen</p><p>
 predictive analytics -> what will happen next</p><p>
@@ -168,41 +170,11 @@ gathering data</p><p>
 cleaning data</p><p>
 analyzing and mining data</p><p>
 interpreting results</p><p>
-presenting your findings</li><ul></p><p>
+presenting your findings</li></p><p>
 <h4>"analysis" vs. "analytics"?</h4></p><p>
 Analysis - detailed examination of the elements or structure of something</p><p>
 Analytics - the systematic computational analysis of data or statistics</p><p>
-
-
-
-
-</p></article>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</article>
 
 <article id="intro-courses">
 <h2><a href="#intro-courses">A Look at Introductory Courses</a></h2>
