--- a/data.html
+++ b/data.html
@@ -159,7 +159,7 @@ organize and monitor data on different business functions</p><p>
 explore data to extract actionables</p><p>
 <h3>Defining Data Analysis</h3></p><p>
 -> finding patterns and correlations to draw conclusions about past performance and future actions</p><p>
-<h4>types:<h4></p><p>
+<h4>types:</h4></p><p>
 descriptive analytics -> what happened</p><p>
 diagnostic analytics -> why did it happen</p><p>
 predictive analytics -> what will happen next</p><p>
