--- a/data.html
+++ b/data.html
@@ -164,7 +164,7 @@ descriptive analytics -> what happened</p><p>
 diagnostic analytics -> why did it happen</p><p>
 predictive analytics -> what will happen next</p><p>
 prescriptive analytics -> what should be done about it</p><p>
-understanding the problem adn desired result</p><p>
+understanding the problem and desired result</p><p>
 setting a clear metric</p><p>
 gathering data</p><p>
 cleaning data</p><p>
