completed ibm-da1-wk1

--- a/data.html
+++ b/data.html
@@ -20,6 +20,8 @@ Now:<br>
 
 <section id="all">
 
+
+
 <article id="beginner-analyst-tips">
 <h2><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a></h2>
 <margin><a href="#tag-tips"><tag>tips</tag></a><br>
@@ -101,7 +103,7 @@ you can either find a data set first and then start on the project, or let the p
 these projects are less about the complexity of the data, and more about being able to tell engaging stories with them</p><p>
 using unique data can help you stand out</p><p>
 web scraping (lots of python packages for this) can help you create your won datasets</p><p>
-projects that demonstarte skiill in data cleaning is important</p><p>
+projects that demonstarte skill in data cleaning is important</p><p>
 you can also use public APIs to develop unique datasets</p><p>
 check out awesome-public-datasets on GH</p><p>
 The Pudding is an interesting site for data journalism</p><p>
@@ -170,10 +172,54 @@ gathering data</p><p>
 cleaning data</p><p>
 analyzing and mining data</p><p>
 interpreting results</p><p>
-presenting your findings</li></p><p>
+presenting your findings</p><p>
 <h4>"analysis" vs. "analytics"?</h4></p><p>
 Analysis - detailed examination of the elements or structure of something</p><p>
 Analytics - the systematic computational analysis of data or statistics</p><p>
+<h3>Responsibilites of a Data Analyst</h3></p><p>
+acuiring data</p><p>
+creating queries to extract required data</p><p>
+filtering, cleaning, standardizing, and reorganizing data</p><p>
+using statistical tools</p><p>
+using statisical techniques to identify patterns</p><p>
+analyzing patterns</p><p>
+preparing reports and charts</p><p>
+creating appropriate documentation</p><p>
+<h4>technical skills</h4></p><p>
+Expertise in using spreadsheets</p><p></p><p>
+-> i.e Excel or Sheets
+proficiency is statistical analysis and visualization tools</p><p>\
+-> i.e. IBM Cognos, IBM SPSS, Oracle Visual Analyzer, Microsoft Power BI, SAS, and Tableau</p><p>
+proficiency in (atl 1) programmning languages</p><p>
+-> i.e. R, Python, C++, Java, and MATLAB</p><p>
+good knowledged of SQL and ability to work with data in relational and NoSWL databases</p><p>
+ability to access and extract data from data repositories</p><p>
+-> i.e. Data Marts, Data Warehouses, Data Lakes, and Data Pipelines</p><p>
+Familiarity with Big Data processing tools</p><p>
+-> i.e. Hadoop, Hive, and Spark</p><p>
+<h4>Functional Skills</h4></p><p>
+proficiency in Statistics</p><p>
+-> analyze data, validate the analysis, identify fallacies and logical errors</p><p>
+analytical skills</p><p>
+-> research and interpret data, theorize, make forecasts</p><p>
+problem-solving skills</p><p>
+probing skills</p><p>
+-> identify and define the problem statement and desired outcome</p><p>
+data visualization skills</p><p>
+-> create clear and compelling visualization to preset the analysis</p><p>
+project management</p><p>
+-> manage the process, people, dependencies of initiative</p><p>
+<h4>soft skills</h4></p><p>
+collaborate with business teams</p><p>
+communicate effectively to report and present findings</p><p>
+tell a compelling story</p><p>
+gather buy-in</p><p>
+gather support and buy-in for your work</p><p>
+<h3>Foraging for Insights</h3></p><p>
+Define problem statement</p><p>
+Gather useful data</p><p>
+develop initial hypothesis</p><p>
+
 </article>
 
 <article id="intro-courses">
@@ -269,6 +315,15 @@ Something else that occurs to me (an itch, so to speak) is how to sort of build 
 I've also started this (currently hosted on GitHub pages) site as a way of tracking my process of learning, whatever that may be. Based on the first commits, it may be clear that this site is a copy of a single page template that I've been working on for quite a while. For the time being, this site is very much under construction. 
 </p>
 </article>
+
+<article id="TEMPLATE">
+<h2><a href="#TEMPLATE">TITLE</a></h2>
+<margin><a href="#tag-tagname"><tag>TAG</tag></a><br>
+<date>23-09-09 19:01</date></margin><p>
+portfolio ideas:
+
+- vinyl production
+</p></article>
 
 <article id="tag-tips">
 <h2><a href="#tag-tips">tag: tips</a></h2><p>
