edited index and posts

--- a/data.html
+++ b/data.html
@@ -188,7 +188,7 @@ creating appropriate documentation</p><p>
 <h4>technical skills</h4></p><p>
 Expertise in using spreadsheets</p><p></p><p>
 -> i.e Excel or Sheets
-proficiency is statistical analysis and visualization tools</p><p>\
+proficiency is statistical analysis and visualization tools</p><p>
 -> i.e. IBM Cognos, IBM SPSS, Oracle Visual Analyzer, Microsoft Power BI, SAS, and Tableau</p><p>
 proficiency in (atl 1) programmning languages</p><p>
 -> i.e. R, Python, C++, Java, and MATLAB</p><p>
