--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ working in audio + video <a href="https://tone.support/">post-production</a></p>
 <p>
 <a href="https://501.design">consulting</a> in the non-profit space</p><p>
 
-<a href="https://github.com/diagrammatics" target="_blank">GitHub&#xFE0E</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/data.html#contact">reach out</a>
+<a href="https://github.com/diagrammatics" target="_blank">code&#xFE0E</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/data.html#contact">contact</a>
 </front>
 </body>
 
