added resources tag and links post

--- a/data.html
+++ b/data.html
@@ -20,7 +20,12 @@ Now:<br>
 
 <section id="all">
 
-
+<article id="useful-links">
+<h2><a href="#useful-links">Useful Links</a></h2>
+<margin><a href="#tag-resources"><tag>resources</tag></a><br>
+<date>23-09-12 22:41</date></margin><p>
+<a href="https://www.stratascratch.com/" target="_blank">Stratascratch↗&#xFE0E</a> - Data Analysis Exercises in SQL, Python, and R
+</p></article>
 
 <article id="beginner-analyst-tips">
 <h2><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a></h2>
@@ -325,11 +330,6 @@ portfolio ideas:
 - vinyl production
 </p></article>
 
-<article id="tag-tips">
-<h2><a href="#tag-tips">tag: tips</a></h2><p>
-<a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
-</p></article>
-
 <article id="ibm-da1">
 <h2><a href="#ibm-da1">Course: IBM - Intro to Data Analytics</a></h2><p>
 <a href="#ibm-da1-wk1">Week 1</a><br>
@@ -342,12 +342,11 @@ tag: meta</a></h2><p>
 <a href="#first-post">Data Analytics?</a><br>
 </p></article>
 
-
-
-<article id="unlisted">
-<h2><a href="#tag-unlisted">tag: Unlisted</a></h2><p>
-<a href="#profiles">Profiles</a>
+<article id="resources">
+<h2><a href="#resources">tag: resources</a></h2><p>
+<a href="#useful-links">Useful Links</a><br>
 </p></article>
+
 
 <article id="tags">
 <h2><a href="#tags">Tags</a></h2><p>
@@ -356,9 +355,21 @@ tag: meta</a></h2><p>
 <a href="#tag-meta">meta</a><br>
 </p></article>
 
+<article id="tag-tips">
+<h2><a href="#tag-tips">tag: tips</a></h2><p>
+<a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
+</p></article>
+
+<article id="unlisted">
+<h2><a href="#tag-unlisted">tag: Unlisted</a></h2><p>
+<a href="#profiles">Profiles</a>
+</p></article>
+
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
+<date>23-09-12<br></date><a href="#useful-links">Useful Links</a><br>
+<date>23-09-11<br></date><a href="#ibm-da1-wk1">[Completed] IBM - Intro to Data Analytics: Week 1</a><br>
 <date>23-09-07<br></date><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
 <date>23-09-07<br></date><a href="#ibm-da1-wk1">IBM - Intro to Data Analytics: Week 1</a><br>
 <date>23-09-06<br></date><a href="#intro-courses">A Look at Introductory Courses</a><br>
