--- a/data.html
+++ b/data.html
@@ -343,7 +343,7 @@ tag: meta</a></h2><p>
 </p></article>
 
 <article id="resources">
-<h2><a href="#resources">tag: resources</a></h2><p>
+<h2><a href="#tag-resources">tag: resources</a></h2><p>
 <a href="#useful-links">Useful Links</a><br>
 </p></article>
 
