added portfolio ideas and fixed tag list

--- a/data.html
+++ b/data.html
@@ -321,13 +321,13 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 </p>
 </article>
 
-<article id="TEMPLATE">
-<h2><a href="#TEMPLATE">TITLE</a></h2>
-<margin><a href="#tag-tagname"><tag>TAG</tag></a><br>
+<article id="project-ideas">
+<h2><a href="#project-ideas">Portfolio Project Ideas</a></h2>
+<margin><a href="#tag-resources"><tag>resources</tag></a><br>
 <date>23-09-09 19:01</date></margin><p>
-portfolio ideas:
-
 - vinyl production
+- music industry statistics
+- music hardware sales
 </p></article>
 
 <article id="ibm-da1">
@@ -345,14 +345,16 @@ tag: meta</a></h2><p>
 <article id="resources">
 <h2><a href="#tag-resources">tag: resources</a></h2><p>
 <a href="#useful-links">Useful Links</a><br>
+<a href="#project-ideas">Portfolio Project Ideas</a>
 </p></article>
 
 
 <article id="tags">
 <h2><a href="#tags">Tags</a></h2><p>
-<a href="#tag-tips">tips</a><br>
 <a href="#ibm-da1">IBM-DA1</a><br>
 <a href="#tag-meta">meta</a><br>
+<a href="#tag-resources">resources</a><br>
+<a href="#tag-tips">tips</a><br>
 </p></article>
 
 <article id="tag-tips">
@@ -370,6 +372,7 @@ tag: meta</a></h2><p>
 Chronological (ascending)</a></h2><p>
 <date>23-09-12<br></date><a href="#useful-links">Useful Links</a><br>
 <date>23-09-11<br></date><a href="#ibm-da1-wk1">[Completed] IBM - Intro to Data Analytics: Week 1</a><br>
+<date>23-09-09<br></date><a href="#project-ideas">Portfolio Project Ideas</a><br>
 <date>23-09-07<br></date><a href="#beginner-analyst-tips">Research: Assorted Advice for Beginners</a><br>
 <date>23-09-07<br></date><a href="#ibm-da1-wk1">IBM - Intro to Data Analytics: Week 1</a><br>
 <date>23-09-06<br></date><a href="#intro-courses">A Look at Introductory Courses</a><br>
