--- a/data.html
+++ b/data.html
@@ -24,7 +24,9 @@ Now:<br>
 <h2><a href="#useful-links">Useful Links</a></h2>
 <margin><a href="#tag-resources"><tag>resources</tag></a><br>
 <date>23-09-12 22:41</date></margin><p>
-<a href="https://www.stratascratch.com/" target="_blank">Stratascratch↗&#xFE0E</a> - Data Analysis Exercises in SQL, Python, and R
+<a href="https://www.stratascratch.com/" target="_blank">Stratascratch↗&#xFE0E</a> - Data Analysis Exercises in SQL, Python, and R</p><p>
+<a href="https://datasciencemasters.org/" target="_blank">OSDSM↗&#xFE0E</a> - The Open Source Data Science Masters Degree</p><p>
+<a href="https://www.reddit.com/r/learndatascience/" target="_blank">r/learndatascience↗&#xFE0E</a>
 </p></article>
 
 <article id="beginner-analyst-tips">
