fixed resources tag

--- a/data.html
+++ b/data.html
@@ -344,7 +344,7 @@ tag: meta</a></h2><p>
 <a href="#first-post">Data Analytics?</a><br>
 </p></article>
 
-<article id="resources">
+<article id="tag-resources">
 <h2><a href="#tag-resources">tag: resources</a></h2><p>
 <a href="#useful-links">Useful Links</a><br>
 <a href="#project-ideas">Portfolio Project Ideas</a>
