--- a/data.html
+++ b/data.html
@@ -327,9 +327,11 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 <h2><a href="#project-ideas">Portfolio Project Ideas</a></h2>
 <margin><a href="#tag-resources"><tag>resources</tag></a><br>
 <date>23-09-09 19:01</date></margin><p>
-- vinyl production
-- music industry statistics
-- music hardware sales
+- vinyl production</p><p>
+- music industry statistics</p><p>
+- music hardware sales</p><p>
+- genre diaspora</p><p>
+- record labels</p><p>
 </p></article>
 
 <article id="ibm-da1">
