--- a/data.html
+++ b/data.html
@@ -4,7 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>dia_</title><link rel=“icon” href="/icons/favicon.ico">
 <link rel="shortcut icon" href="/icons/favicon.ico">
-<link href="/style.css" rel="stylesheet" type="text/css" media="all"></head>
+<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+<script type="text/javascript" src="/scripts/mathjax.js"></script>
+<script type="module" src="/scripts/zero-md.js"></script></head>
 
 <sidebar>
 Now:<br>
@@ -19,6 +21,22 @@ Now:<br>
 <body><main>
 
 <section id="all">
+
+<article id="ibm-da1-wk2">
+<h2><a href="#ibm-da1-wk2">IBM Introduction to Data Analytics: Week 2</a></h2>
+<margin><a href="#ibm-da1"><tag>ibm-da1</tag></a><br>
+<date>23-09-17 10:33</date></margin><p>
+<zero-md><script type="text/markdown">
+### Data Analyst's Ecosystem
+
+- the infrastructure, software, tools, frameworks, and processes used to:
+    - gather
+    - clean
+    - mine
+    - visualize
+
+</script></zero-md>
+</p></article>
 
 <article id="useful-links">
 <h2><a href="#useful-links">Useful Links</a></h2>
