--- a/data.html
+++ b/data.html
@@ -29,11 +29,51 @@ Now:<br>
 <zero-md><script type="text/markdown">
 ### Data Analyst's Ecosystem
 
-- the infrastructure, software, tools, frameworks, and processes used to:
+The infrastructure, software, tools, frameworks, and processes used to:
     - gather
     - clean
     - mine
     - visualize
+
+Data can be categorized as:
+    - structured: follows a rigid format (i.e. csv)
+    - semi-structured: mix of data that has consistent and non-consistent characteristics (i.e. emails)
+    - unstructured: complex qualitative data that cannot be structured (i.e. photos, videos)
+ 
+Data can come in a variety of file formats:
+    - relational databases
+    - non-relational databases
+    - APIs
+    - web services
+    - data streams
+    - social platforms
+    - sensor devices
+
+Data repositories:
+    - databases
+    - warehouses
+    - marts
+    - lakes
+    - Big Data stores
+    all impact the available tools used for management and analysis.
+
+Languages:
+    - query languages (i.e. SQL)
+    - programming langueags (i.e. Python)
+    - shell and scripting languages
+    all part of analyst's workbench
+
+### What is Data?
+
+**Data is unorganized information that is processed to make it meaningful.**
+
+**Structured data has a well defined model**, can be stored in well-defined schemas, often as tabular data (spreadsheets, databases, OLTP, etc.)
+
+**Semi-structrued has some organizational properties but lacks a rigid schema** by which data can be stored, often contains tags or metadata which is ussed to group and organize it into a hierarchy (E-mails, XML, TCP/IP Packets, etc.)
+
+**Unstructured data is data that does not have an easily identifiable structure**, and does not follow a particular format, sequence, semantics, or rules (i.e. web pages, social media feeds, media)
+
+
 
 </script></zero-md>
 </p></article>
@@ -354,6 +394,7 @@ I've also started this (currently hosted on GitHub pages) site as a way of track
 
 <article id="ibm-da1">
 <h2><a href="#ibm-da1">Course: IBM - Intro to Data Analytics</a></h2><p>
+<a href="#ibm-da1-wk2">Week 2</a><br>
 <a href="#ibm-da1-wk1">Week 1</a><br>
 </p></article>
 
@@ -392,6 +433,7 @@ tag: meta</a></h2><p>
 <article id="chronology">
 <h2><a href="#chronology">
 Chronological (ascending)</a></h2><p>
+<date>23-09-17<br></date><a href="#ibm-da1-wk2">IBM - Intro to Data Analytics: Week 2</a><br>
 <date>23-09-12<br></date><a href="#useful-links">Useful Links</a><br>
 <date>23-09-11<br></date><a href="#ibm-da1-wk1">[Completed] IBM - Intro to Data Analytics: Week 1</a><br>
 <date>23-09-09<br></date><a href="#project-ideas">Portfolio Project Ideas</a><br>
