--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Hi! I'm Ryan.
 <p>
 I'm currently:</p></p><p>
 <p>
-learning <a href="/data.html#chronology">data analytics</a></p>
+learning data analytics</p>
 <p>
 working in audio + video <a href="https://tone.support/">post-production</a></p><p>
 <p>
