--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ Hi! I'm Ryan.
 <p>
 I'm currently:</p></p><p>
 <p>
-learning data analytics</p>
+learning about programming</p>
 <p>
 working in audio + video <a href="https://tone.support/">post-production</a></p><p>
 <p>
-<a href="https://501.design">consulting</a> in the non-profit space</p><p>
+helping non-profits <a href="https://501.design">get funding/a></p><p>
 
-<a href="https://github.com/diagrammatics" target="_blank">code&#xFE0E</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/data.html#contact">contact</a>
+<a href="https://github.com/diagrammatics" target="_blank">code&#xFE0E</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/contact.html">contact</a>
 </front>
 </body>
 
