--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ learning about programming</p>
 <p>
 working in audio + video <a href="https://tone.support/">post-production</a></p><p>
 <p>
-helping non-profits <a href="https://501.design">get funding/a></p><p>
+helping non-profits <a href="https://501.design">get funding</a></p><p>
 
-<a href="https://github.com/diagrammatics" target="_blank">code&#xFE0E</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/contact.html">contact</a>
+<a href="https://github.com/diagrammatics" target="_blank">code&#xFE0E</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/contact.html#contact">contact</a>
 </front>
 </body>
 
